--- a/flexbox_test.html
+++ b/flexbox_test.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>testing</title>
-		<link rel="stylesheet" href="./funkything.css">
+		<link rel="stylesheet" href="resources/flexbox_test.css">
 	</head>
 	<body>
 		<div class="outest">
-			<div class="outer" style="flex-grow: 1">
+			<div class="outer">
 				<div class="inner_1">
 					<h3>test</h3>
 				</div>
@@ -14,7 +14,7 @@
 					<h3>test</h3>
 				</div>
 			</div>
-			<div class="outer outer2test" style="flex-grow: 2">
+			<div class="outer outer2test">
 				<div class="inner_2">
 					<h3>test</h3>
 				</div> 
@@ -28,8 +28,8 @@
 					<h3>test</h3>
 				</div>
 			</div>
-			<div class="outer outer3test" style="flex-grow: 2">
-                <div class="inner_3" style="flex-grow: 1">
+			<div class="outer outer3test">
+                <div class="inner_3" style="flex-grow: 0.2">
 					<h3>test</h3>
 				</div>
 				<div class="inner_3" style="flex-grow: 2">
@@ -42,7 +42,7 @@
 					<h3>test</h3>
 				</div>
 			</div>
-			<div class="outer" style="flex-grow: 1">
+			<div class="outer">
 				<div class="inner_2">
 					<h3>test</h3>
 				</div>
