Grid Test Issue
For some reason, the orange test boxes are incredibly spaced in my third blue box and I'm not entirely sure why.

--- a/grid_test.html
+++ b/grid_test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>flexbox testing</title>
-		<link rel="stylesheet" href="resources/flexbox_test.css">
+		<title>grid testing</title>
+		<link rel="stylesheet" href="resources/grid_test.css">
 	</head>
 	<body>
 		<div class="outest">
@@ -31,16 +31,16 @@
 			</div>
 
 			<div class="outer outer3test">
-                <div class="inner_3" style="flex-grow: 0.2">
+                <div class="inner_3" style="grid-column: 1 / span 2;">
 					<h3>test</h3>
 				</div>
-				<div class="inner_3" style="flex-grow: 2">
+				<div class="inner_3">
 					<h3>test</h3>
 				</div>
-				<div class="inner_3" style="flex-grow: 3">
+				<div class="inner_3">
 					<h3>test</h3>
 				</div>
-				<div class="inner_3" style="flex-grow: 4">
+				<div class="inner_3">
 					<h3>test</h3>
 				</div>
 			</div>
