--- a/grid_test.html
+++ b/grid_test.html
@@ -31,10 +31,10 @@
 			</div>
 
 			<div class="outer outer3test">
-                <div class="inner_3" style="grid-column: 1 / span 2;">
+                <div class="inner_3" style="grid-column: auto / span 2;">
 					<h3>test</h3>
 				</div>
-				<div class="inner_3">
+				<div class="inner_3" style="grid-row: auto / span 2;">
 					<h3>test</h3>
 				</div>
 				<div class="inner_3">
