Navbar Test 1 Issue Solution
Using flex-flow to make the flexbox start on the right side rather than the left helped fix the issue.

--- a/navbar_test_1.html
+++ b/navbar_test_1.html
@@ -15,9 +15,9 @@
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                 </div>
-                <div class="navsplit">
+                <div class="navsplit" style="flex-flow: row-reverse;">
                     <div class="loginbutton">
-                        <span>hello there :)</span>
+                        <span style="text-align: center; margin: auto;">Log In</span>
                     </div>
                 </div>
             </div>
