Navbar Test 1 Final
I'm trying to test different methods of making navigation bars and this one was made using flexboxes.

--- a/navbar_test_1.html
+++ b/navbar_test_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>grid testing</title>
+        <title>navbar testing</title>
 		<link rel="stylesheet" href="resources/navbar_test_1.css">
     </head>
     <body>
@@ -15,7 +15,7 @@
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                 </div>
-                <div class="navsplit" style="flex-flow: row-reverse;">
+                <div class="navsplit" style="flex-flow: row-reverse; ">
                     <div class="loginbutton">
                         <span style="text-align: center; margin: auto;">Log In</span>
                     </div>
