--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
-                    <img src="./resources/Images/placeholder.png" alt="placeholder" style="width: 72px; background-color: green;">
+                    <img src="./resources/Images/placeholder.png" alt="placeholder" class="logobutton">
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                 </div>
-                
+            </div>
+
+            <div class="main" style="height: 1500px; background-color: magenta;">
+
+            </div>
+
+            <div class="footer">
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">Lorem ipsum dolor sit amet</span></div>
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
             </div>
         </div>
     </body>
