Hero Banner + Clean Up
I added the hero banner to the website and while I was at it, decided to also clean up some of the files so that the main website wasn't a huge mess. Should I have maybe used the branches feature for my tests? Probably...

--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <div class="grid-container">
-            <!--navigation bar-->
             <div class="navbar">
                 <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
                     <div class="loginbutton">
@@ -23,13 +22,10 @@
                 </div>
             </div>
 
-            <!--main contents of the website-->
-            <div class="main" style="height: 1500px;">
-                <img src="./resources/Images/placeholder.png" alt="placeholder" class="herobanner">
-                <div style="background-color: green; height: 100px; grid-column: auto / span 1; grid-row: auto / span 2;"></div>
+            <div class="main" style="height: 1500px; background-color: magenta;">
+
             </div>
 
-            <!--footer-->
             <div class="footer">
                 <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                 <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">Lorem ipsum dolor sit amet</span></div>
