Grid Sizing Issue
The gaps between each of the different components are far larger than they are supposed to be. The gaps are supposed to be non-existent with the only real gap being between the bottom grid row and the footer.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="height: 1500px;">
-                <img src="./resources/Images/placeholder.png" alt="placeholder" class="herobanner">
-                <div style="background-color: green; height: 100px; grid-column: auto / span 1; grid-row: auto / span 2;"></div>
+            <div class="main" style="">
+                <img src="./resources/Images/placeholder_herobanner.png" alt="placeholder" class="herobanner">
+                <div style="background-color: green; height: 100px; grid-column: auto / span 2;"></div>
+                <div style="background-color: orange; height: 100px;"></div>
+                <div style="background-color: red; height: 100px;"></div>
             </div>
 
             <!--footer-->
