--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <h3>Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet</p>
                     <p>Lorem ipsum dolor sit amet</p>
-                    <img src="Resources/Images/placeholder.png" style="width: 100%; height: 100;">
+                    <img src="Resources/Images/placeholder.png" style="width: 100%; background-color: white;">
                 </div>
                 
-                <div style="background-color: red; height: auto; padding: 32px">
-                    <div style="display: flex; justify-content: center; height: 100%; background-color: white;;"><img src="Resources/Images/placeholder.png" style="width: 100%; height: auto;"></div>
+                <div class="locationimage">
+                    <img src="Resources/Images/placeholder.png" style="width: 100%; background-color: white;">
                 </div>
             </div>
 
