--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 
                 <div class="locationimage">
-                    <img src="Resources/Images/placeholder.png" style="width: 100%; background-color: white;">
+                    <img src="Resources/Images/placeholder.png" style="width: 100%; aspect-ratio: 1 / 1; background-color: white;">
                 </div>
             </div>
 
