--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,11 @@
     <head>
         <title>example header</title>
 		<link rel="stylesheet" href="resources/main.css">
+        <link rel="stylesheet" href="resources/contact.css">
     </head>
     <body>
         <div class="grid-container">
+            <!--navigation bar-->
             <div class="navbar">
                 <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
                     <div class="loginbutton">
@@ -22,10 +24,12 @@
                 </div>
             </div>
 
+            <!--main contents of the website-->
             <div class="main" style="height: 1500px; background-color: magenta;">
 
             </div>
 
+            <!--footer-->
             <div class="footer">
                 <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                 <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">Lorem ipsum dolor sit amet</span></div>
