--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>example header</title>
 		<link rel="stylesheet" href="resources/main.css">
+        <link rel="stylesheet" href="resources/homepage.css">
     </head>
     <body>
         <div class="grid-container">
