Complete Members Page Template
I made a members page real quick. I'm happy with how it turned out, I just gotta find out if the stakeholder feels the same way.

--- a/members.html
+++ b/members.html
@@ -25,8 +25,37 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="height: 1500px; background-color: magenta;">
-
+            <div class="main" style="background-color: magenta;">
+                <div class="member" style="background-color: aqua;">
+                    <div class="tag">
+                        <h2>Name</h2>
+                        <h3>Title</h3>
+                    </div>
+                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <p class="contents">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
+                    </p>
+                </div>
+                <div class="member" style="background-color: aqua;">
+                    <div class="tag">
+                        <h2>Name</h2>
+                        <h3>Title</h3>
+                    </div>
+                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <p class="contents">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
+                    </p>
+                </div>
+                <div class="member" style="background-color: aqua;">
+                    <div class="tag">
+                        <h2>Name</h2>
+                        <h3>Title</h3>
+                    </div>
+                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <p class="contents">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
+                    </p>
+                </div>
             </div>
 
             <!--footer-->
