--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>example header</title>
-		<link rel="stylesheet" href="resources/main.css">
-        <link rel="stylesheet" href="resources/homepage.css">
+		<link rel="stylesheet" href="./Resources/main.css">
+        <link rel="stylesheet" href="./Resources/homepage.css">
     </head>
     <body>
         <div class="grid-container">
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
-                    <img src="./resources/Images/placeholder.png" alt="placeholder" class="logobutton">
+                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
@@ -26,7 +26,7 @@
 
             <!--main contents of the website-->
             <div class="main">
-                <img src="./resources/Images/placeholder_herobanner.png" alt="placeholder" class="herobanner">
+                <img src="./Resources/Images/placeholder_herobanner.png" alt="placeholder" class="herobanner">
                 
                 <div style="background-color: green; grid-column: auto / span 2; ">
                     <h1 style="text-align: center;">Lorem Ipsum Dolor Sit Amet</h1>
@@ -37,11 +37,11 @@
                     <h3>Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet</p>
                     <p>Lorem ipsum dolor sit amet</p>
-                    <img src="Resources/Images/placeholder.png" style="width: 100%; background-color: white;">
+                    <img src="./Resources/Images/placeholder.png" style="width: 100%; background-color: white;">
                 </div>
                 
                 <div class="locationimage">
-                    <img src="Resources/Images/placeholder.png" style="width: 100%; aspect-ratio: 1 / 1; background-color: white;">
+                    <img src="./Resources/Images/placeholder.png" style="width: 100%; aspect-ratio: 1 / 1; background-color: white;">
                 </div>
             </div>
 
