--- a/members.html
+++ b/members.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>example header</title>
-		<link rel="stylesheet" href="resources/main.css">
-        <link rel="stylesheet" href="resources/members.css">
+		<link rel="stylesheet" href="./Resources/main.css">
+        <link rel="stylesheet" href="./Resources/members.css">
     </head>
     <body>
         <div class="grid-container">
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
-                    <img src="./resources/Images/placeholder.png" alt="placeholder" class="logobutton">
+                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
@@ -31,27 +31,29 @@
                         <h2>Name</h2>
                         <h3>Title</h3>
                     </div>
-                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
                     <p class="contents">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
                     </p>
                 </div>
+
                 <div class="member" style="background-color: aqua;">
                     <div class="tag">
                         <h2>Name</h2>
                         <h3>Title</h3>
                     </div>
-                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
                     <p class="contents">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
                     </p>
                 </div>
+
                 <div class="member" style="background-color: aqua;">
                     <div class="tag">
                         <h2>Name</h2>
                         <h3>Title</h3>
                     </div>
-                    <img class="memberimage" src="Resources/Images/placeholder.png" alt="committee member">
+                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
                     <p class="contents">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
                     </p>
