--- a/calendar.html
+++ b/calendar.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>example header</title>
-		<link rel="stylesheet" href="resources/main.css">
-        <link rel="stylesheet" href="resources/calendar.css">
+		<link rel="stylesheet" href="./Resources/main.css">
+        <link rel="stylesheet" href="./Resources/calendar.css">
     </head>
     <body>
         <div class="grid-container">
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
-                    <img src="./resources/Images/placeholder.png" alt="placeholder" class="logobutton">
+                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
