--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>example header</title>
-		<link rel="stylesheet" href="resources/main.css">
-        <link rel="stylesheet" href="resources/contact.css">
+		<link rel="stylesheet" href="./Resources/main.css">
+        <link rel="stylesheet" href="./Resources/contact.css">
     </head>
     <body>
         <div class="grid-container">
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
-                    <img src="./resources/Images/placeholder.png" alt="placeholder" class="logobutton">
+                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
                     <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
@@ -26,7 +26,15 @@
 
             <!--main contents of the website-->
             <div class="main" style="height: 1500px; background-color: magenta;">
+                <div class="info">
+                    <h1>Lorem Ipsum Dolor Sit Amet</h1>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Consectetur adipiscing elit</p>
+                    <p>Etiam condimentum diam id sagittis pulvinar</p>
+                </div>
+                <div class="form">
 
+                </div>
             </div>
 
             <!--footer-->
