--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,18 @@
                     <p>Consectetur adipiscing elit</p>
                     <p>Etiam condimentum diam id sagittis pulvinar</p>
                 </div>
-                <div class="form">
 
-                </div>
+                <form>
+                    <label for="fullname">Full Name<span style="color: red;">*</span></label><br>
+                    <input type="text" class="input" id="fullname" name="fullname">
+                    <label for="email">Email<span style="color: red;">*</span></label><br>
+                    <input type="text" class="input" id="email" name="email">
+                    <label for="phone">Phone Number</label><br>
+                    <input type="text" class="input" id="phone" name="phone">
+                    <label for="message">Your Message<span style="color: red;">*</span></label><br>
+                    <textarea class="input" id="message" name="message"></textarea><br>
+                    <input type="submit">
+                </form>
             </div>
 
             <!--footer-->
