Contact Submit Button
I went ahead and made a submit button for the page. Currently, it doesn't do anything (and I'm not even sure if I'm going to have enough time to finish it), but it is at least there for aesthetical purposes in the meantime before it gets a use. Now, I believe I just have to clean the page up and I'll be ready to show my stakeholder!

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="height: 1500px; background-color: magenta;">
+            <div class="main" style="background-color: magenta;">
                 <div class="info">
                     <h1>Lorem Ipsum Dolor Sit Amet</h1>
                     <p>Lorem ipsum dolor sit amet</p>
@@ -42,7 +42,8 @@
                     <input type="text" class="input" id="phone" name="phone">
                     <label for="message">Your Message<span style="color: red;">*</span></label><br>
                     <textarea class="input" id="message" name="message"></textarea><br>
-                    <input type="submit">
+                    <span style="color: red; font-size: 12pt;">* means required text </span>
+                    <input type="submit" class="sendbutton" value="Send">
                 </form>
             </div>
 
