Complete Contact Page Template
I believe I have now completed all the templates for each of the pages! Now, I need to get my stakeholder to check the website and see if they are happy with it and to see what they would like changed. After correcting any change the stakeholder may request, sprint 1 should be finished :)

--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,10 @@
             <div class="main" style="background-color: magenta;">
                 <div class="info">
                     <h1>Lorem Ipsum Dolor Sit Amet</h1>
-                    <p>Lorem ipsum dolor sit amet</p>
-                    <p>Consectetur adipiscing elit</p>
-                    <p>Etiam condimentum diam id sagittis pulvinar</p>
+                    <span>Lorem ipsum dolor sit amet</span><br>
+                    <span>Consectetur adipiscing elit</span><br>
+                    <span>Etiam condimentum diam id sagittis pulvinar</span><br>
+                    <br>
                 </div>
 
                 <form>
