Navbar After Stakeholder Feedback 2
My stakeholder gave me another bit of feedback, in that the login button didn't look like a button at all. I went ahead and fixed that, so now the login button actually looks like a button.

--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,7 @@
             <div class="navbar">
                 <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
                     <div class="loginbutton">
-                        <span style="text-align: center; margin: auto;">Log In</span>
+                        <input type="submit" value="Log In">
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
