--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="navbar">
                 <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
                     <div class="loginbutton">
-                        <span style="text-align: center; margin: auto;">Log In</span>
+                        <input type="submit" value="Log In">
                     </div>
                 </div>
                 <div class="navsplit" style="width: 100%">
