--- a/contact.html
+++ b/contact.html
@@ -9,18 +9,15 @@
         <div class="grid-container">
             <!--navigation bar-->
             <div class="navbar">
-                <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
-                    <div class="loginbutton">
-                        <input type="submit" value="Log In">
-                    </div>
+                <div class="loginbutton">
+                    <input type="submit" value="Log In">
                 </div>
-                <div class="navsplit" style="width: 100%">
-                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div style="width: 100%">
+                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logobutton"></a>
+                    <div class="navbutton"><a href="./index.html">Home</a></div>
+                    <div class="navbutton"><a href="./members.html">Members</a></div>
+                    <div class="navbutton"><a href="./calendar.html">Calendar</a></div>
+                    <div class="navbutton"><a href="./contact.html">Contact Us</a></div>
                 </div>
             </div>
 
