--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
         <div class="grid-container">
             <!--navigation bar-->
             <div class="navbar">
-                <div class="navsplit" style="flex-flow: row-reverse; width: auto;">
-                    <div class="loginbutton">
-                        <input type="submit" value="Log In">
-                    </div>
+                <div class="loginbutton">
+                    <input type="submit" value="Log In">
                 </div>
-                <div class="navsplit" style="width: 100%">
-                    <img src="./Resources/Images/placeholder.png" alt="placeholder" class="logobutton">
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                    <div class="navbutton"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div style="width: 100%">
+                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logobutton"></a>
+                    <div class="navbutton"><a href="./index.html">Home</a></div>
+                    <div class="navbutton"><a href="./members.html">Members</a></div>
+                    <div class="navbutton"><a href="./calendar.html">Calendar</a></div>
+                    <div class="navbutton"><a href="./contact.html">Contact Us</a></div>
                 </div>
             </div>
 
@@ -31,7 +28,7 @@
                 <div class="padding">
                     <div style="background-color: green; grid-column: auto / span 2; ">
                         <h1 style="text-align: center;">Lorem Ipsum Dolor Sit Amet</h1>
-                        <p style="text-wrap: overflow; text-align: center; padding-left: 25%; padding-right: 25%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et elit nisl. Cras ut nisi vel lectus commodo ultricies. Donec sed turpis vel eros ultrices ullamcorper id quis lacus. Vestibulum vestibulum efficitur sagittis. Aliquam eget erat sit amet elit elementum facilisis sit amet id eros. Pellentesque consectetur posuere lacus in rhoncus. In viverra enim ut arcu vehicula, quis auctor tellus sagittis. Ut egestas mauris purus, pharetra eleifend nunc eleifend sed. </p>
+                        <p style="text-wrap: overflow; text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et elit nisl. Cras ut nisi vel lectus commodo ultricies. Donec sed turpis vel eros ultrices ullamcorper id quis lacus. Vestibulum vestibulum efficitur sagittis. Aliquam eget erat sit amet elit elementum facilisis sit amet id eros. Pellentesque consectetur posuere lacus in rhoncus. In viverra enim ut arcu vehicula, quis auctor tellus sagittis. Ut egestas mauris purus, pharetra eleifend nunc eleifend sed. </p>
                     </div>
                     
                     <div style="background-color: purple; height: auto; padding: 32px">
