--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
 
             <!--footer-->
             <div class="footer">
-                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">Lorem ipsum dolor sit amet</span></div>
-                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
-                <div class="footersplit"><span style="margin: auto; padding: 8px; background-color: grey;">testing</span></div>
+                <div class="socials">
+                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
+                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
+                </div>
+                <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
+                <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
+                <div><span>© 2023 East Coast Bays Toastmasters</span></div>
             </div>
         </div>
     </body>
