--- a/calendar.html
+++ b/calendar.html
@@ -22,8 +22,8 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="background-color: magenta;">
-                <iframe class="calendar" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR97G249gzMoTdG7NwJa9jkxgFgClP08HjlG9QWZdEgsTHntYJCa7pETuZa9s4ZAqEB7j_xFCY6HA6i/pubhtml?gid=274715859&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false" width="100%"></iframe>
+            <div class="main">
+                <iframe class="calendar" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR97G249gzMoTdG7NwJa9jkxgFgClP08HjlG9QWZdEgsTHntYJCa7pETuZa9s4ZAqEB7j_xFCY6HA6i/pubhtml?gid=274715859&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false"></iframe>
             </div>
 
             <!--footer-->
