--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,12 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="background-color: magenta;">
+            <div class="main">
                 <div class="info">
-                    <h1>Lorem Ipsum Dolor Sit Amet</h1>
-                    <span>Lorem ipsum dolor sit amet</span><br>
-                    <span>Consectetur adipiscing elit</span><br>
-                    <span>Etiam condimentum diam id sagittis pulvinar</span><br>
+                    <h1>Contact Us</h1>
+                    <p>You can find a lot of information about Toastmasters in New Zealand at the official <a href="https://d112tm.org.nz/" rel="external" target="_blank">District 112 website</a>.</p>
+                    <p>If you can't find what you need there, please use the contact form below.</p>
+                    <p>We will try our best to respond back to you within 24 hours.</p>
                     <br>
                 </div>
 
@@ -40,7 +40,7 @@
                     <input type="text" class="input" id="phone" name="phone">
                     <label for="message">Your Message<span style="color: red;">*</span></label><br>
                     <textarea class="input" id="message" name="message"></textarea><br>
-                    <span style="color: red; font-size: 12pt;">* means required text </span>
+                    <span style="color: red; font-size: 12pt;">* means required </span>
                     <input type="submit" class="sendbutton" value="Send">
                 </form>
             </div>
