--- a/members.html
+++ b/members.html
@@ -22,37 +22,37 @@
             </div>
 
             <!--main contents of the website-->
-            <div class="main" style="background-color: magenta;">
-                <div class="member" style="background-color: aqua;">
+            <div class="main">
+                <div class="member">
                     <div class="tag">
-                        <h2>Name</h2>
-                        <h3>Title</h3>
+                        <h2>Helen Madden</h2>
+                        <h3>President</h3>
                     </div>
-                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
+                    <img class="memberimage" src="./Resources/Images/Member Photos/hmadden.jpg" alt="committee member">
                     <p class="contents">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
+                        I've been a member of the East Coast Bays club for nearly eight years now.  Toastmasters has helped me in all strands of life, in both public speaking and leadership. It's also been a fantastic way to integrate with others from the local community. If you're looking to become a more confident speaker or gain some leadership skills in a supportive environment then please come along and visit us!
+                    </p>
+                </div>
+                    
+                <div class="member">
+                    <div class="tag">
+                        <h2>Marcus Bristol</h2>
+                        <h3>Treasurer</h3>
+                    </div>
+                    <img class="memberimage" src="./Resources/Images/Member Photos/mbristol.jpg" alt="committee member">
+                    <p class="contents">
+                        I'm a software developer who works in the city for a startup called Pushpay. After reviewing the feedback from one of my recent public talks, I realised that I needed to significantly improve my public speaking skills, so decided to come and learn from the best!
                     </p>
                 </div>
 
-                <div class="member" style="background-color: aqua;">
+                <div class="member">
                     <div class="tag">
-                        <h2>Name</h2>
-                        <h3>Title</h3>
+                        <h2>Glenda George</h2>
+                        <h3>Member</h3>
                     </div>
-                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
+                    <img class="memberimage" src="./Resources/Images/Member Photos/ggeorge.jpg" alt="committee member">
                     <p class="contents">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
-                    </p>
-                </div>
-
-                <div class="member" style="background-color: aqua;">
-                    <div class="tag">
-                        <h2>Name</h2>
-                        <h3>Title</h3>
-                    </div>
-                    <img class="memberimage" src="./Resources/Images/placeholder.png" alt="committee member">
-                    <p class="contents">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum diam id sagittis pulvinar. Maecenas semper nisl a arcu malesuada, et elementum est vehicula. Mauris mollis mollis nibh, at mattis nibh ultricies in. Donec et mauris cursus, pulvinar mauris sed, facilisis erat. Ut nec cursus ligula, ut egestas purus. Donec rhoncus fringilla nisl eu ultrices. Etiam porttitor erat a massa dignissim pulvinar. Aliquam nibh massa, scelerisque hendrerit libero ac, vestibulum condimentum dolor. Sed vel ipsum id sapien mattis aliquet. Sed bibendum quam a pharetra cursus. Quisque porta ex ultrices, bibendum diam et, faucibus velit. Quisque imperdiet dui non urna pharetra, a vehicula eros luctus. Aliquam ut erat odio. Mauris vel elit augue. 
+                        I joined East Coast Bays Toastmasters early 2008 and have filled the positions of VP Membership, VP Education and President and later served as an AD. An unexpectedly satisfying and rewarding journey with the opportunity to encourage and mentor others as well as developing myself. Every meeting is filled with entertainment as you hear everyone's stories real or fabricated. A pleasure to attend. The skills I have learned both in Public Speaking and Leadership have  been transferable to my working environment. A program designed for those who want to make the most of the moment and lead fulfilling lives that have an impact on the community. 
                     </p>
                 </div>
             </div>
