Headers Add + Styling
One of the things my stakeholder wanted changed was the addition of more headers across the rest of the pages and for the headers to not be so dark. I went ahead and did that, there's not much else to say.

--- a/calendar.html
+++ b/calendar.html
@@ -23,6 +23,8 @@
 
             <!--main contents of the website-->
             <div class="main">
+                <h1>East Coast Bays Toastmasters</h1>
+                <h2>2023 - 2024 Calendar</h2>
                 <iframe class="calendar" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR97G249gzMoTdG7NwJa9jkxgFgClP08HjlG9QWZdEgsTHntYJCa7pETuZa9s4ZAqEB7j_xFCY6HA6i/pubhtml?gid=274715859&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false"></iframe>
             </div>
 
