--- a/members.html
+++ b/members.html
@@ -23,6 +23,12 @@
 
             <!--main contents of the website-->
             <div class="main">
+                <div class="info">
+                    <h1>Committee Members</h1>
+                    <p>Serving as an Officer in a Toastmasters Club is an opportunity and a responsibility. It is a great opportunity to get training and experience in a leadership role. It is part of our club membership to be responsible to promote the club's service to members.</p>
+                    <p>In most Toastmaster Clubs the Executive Committee, made up of the 7 elected Officers and the Immediate Past President, handles business on behalf of the club. All Officers have an important role to attend and participate in Executive Committee meetings. The club needs a wide cross section of leadership planning to function well.</p>
+                    <p>These club members are the elected Officers for East Coast Bays Toastmasters.</p>
+                </div>
                 <div class="member">
                     <div class="tag">
                         <h2>Helen Madden</h2>
