Footer Colour Change + Contact Entry Boxes Fix
My stakeholder asked for the footer to be darker, which I did very easily as the footer colour for every page is controlled by a singular css file. My stakeholder also asked for the entry boxes to have a little bit more width to them, which I also added. I also noticed a bug the form could be submitted without having filled in the required entry points, so I went ahead and fixed that too while I was still working on the contact page.

--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
 
                 <form>
                     <label for="fullname">Full Name<span style="color: red;">*</span></label><br>
-                    <input type="text" class="input" id="fullname" name="fullname">
+                    <input type="text" class="input" id="fullname" name="fullname" required>
                     <label for="email">Email<span style="color: red;">*</span></label><br>
-                    <input type="text" class="input" id="email" name="email">
+                    <input type="text" class="input" id="email" name="email" required>
                     <label for="phone">Phone Number</label><br>
                     <input type="text" class="input" id="phone" name="phone">
                     <label for="message">Your Message<span style="color: red;">*</span></label><br>
-                    <textarea class="input" id="message" name="message"></textarea><br>
+                    <textarea class="input" id="message" name="message" required></textarea><br>
                     <span style="color: red; font-size: 12pt;">* means required </span>
                     <input type="submit" class="sendbutton" value="Send">
                 </form>
