Moved Homepage Header
I moved the homepage header to within the hero banner. It took a little bit of work, but I successfully managed to make it look decently ok and resize with the page! In addition to that, I also had to change the way I made the hero banner, which might honestly be a blessing in disguise as I believe I can now change the size of the banner depending on the page size more easily, compared to the previous method where I wasn't too sure what I was going to do for a mobile page. Last thing I need to do now for the stakeholder is add an image to the main information, then I'll theoretically be done with sprint 1.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
                 </div>
             </div>
 
+            <div class="header">
+                <!--img src="./Resources/Images/hero_banner.jpg" alt="placeholder" class="herobanner"-->
+                <h1>East Coast Bays Toastmasters</h1>
+            </div>
+
             <!--main contents of the website-->
             <div class="main">
-                <img src="./Resources/Images/hero_banner.jpg" alt="placeholder" class="herobanner">
-                
                 <div>
                     <div class="info">
-                        <h1 style="text-align: center;">East Coast Bays Toastmasters</h1>
                         <p>We are a community club of <a href="https://www.toastmasters.org/" rel="external" target="_blank">Toastmasters International</a> and have the greatest pleasure meeting in beautiful Browns Bay located in the East Coast Bays of Auckland's North Shore.</p>
                         <p>Toastmasters is a worldwide organisation that has helped many thousands of people to develop confidence and skills in public speaking and leadership. Our club has been active in the East Coast Bays area for nearly 43 years and includes a diverse reflection of our local community. If you are not already aware, the heart of the Toastmasters learning experience is in the club, which provides a friendly, fun and safe environment to step out of our comfort zones. Public speaking is a real fear most people have and the success of Toastmasters is in recognising that fact and providing a fun and supportive environment in which we can grow at our own pace with peer to peer learning forming the essence of how we learn.</p>
                     </div>
